--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
           <img src="/images/node.png" class="w-36 rounded-lg md:ml-5 lg:ml-5" />
           <div>
             <h1 class="text-5xl font-bold">Node.js</h1>
-            <p class="py-6">안녕하세요 AWSKRUG</p>
+            <p class="py-6">안녕하세요 CLOUDTYPE에서 배포한 서비스입니다.</p>
             <button type="button" onclick="window.open('https://github.com/cloudtype-examples/node-express')" class="btn btn-outline rounded">
               GitHub
             </button>
